agregando otro icono

--- a/Tarea5-Detalle/MainForm.resx
+++ b/Tarea5-Detalle/MainForm.resx
@@ -120,4 +120,81 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJELmXCND
+        5twjQ+b+I0Pm/iND5twkQuZcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACND
+        6E8jQ+b+JETn/yRE5/8kROf/JETn/yND5v4jQuVQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAI0PmvSRE5/8kROf/JETn/yRE5/8kROf/JETn/yND5r0AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACJE5R4iQ+eLI0PnqyNC
+        6HokNuwOAAAAAAAAAAAjROfVJETn/yRE5/8kROf/JETn/yRE5/8kROf/I0Pl1gAAAAAAAAAAJDbaDiNC
+        6HojQ+erIkPniyJE5R4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAjQuUyI0Tn7CRE
+        5/8kROf/JETn/yRD5tQhQugXAAAAACND5dYkROf/JETn/yRE5/8kROf/JETn/yRE5/8jQ+fWAAAAACFC
+        6BckQ+bUJETn/yRE5/8kROf/I0Tn7CNC5TIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIkTlHiNE
+        5+wkROf/JETn/yRE5/8kROf/JETn/yNE59UhQugXI0Pl1iRE5/8kROf/JETn/yRE5/8kROf/JETn/yND
+        59YhQugXI0Pn1SRE5/8kROf/JETn/yRE5/8kROf/I0Tn7CJE5R4AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAiQ+eLJETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yNE59UjQ+bkJETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/I0Pn5CND59UkROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/IkPniwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAACND56skROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/RmPp/E1p
+        6vpZc+v5PVro/SRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8jQ+erAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAI0LoeiRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/zJQ
+        5/2ouvH6hpzu/Y6j8PqxwfL6KUjn/SRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yNC
+        6HoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkNtoOJEPm1CRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/T2rq+7TF8vuHnO79kKXv+sfV8/w7Wej8JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE
+        5/8kQ+bUJDbaDgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhQugXI0Pn1SRE5/8kROf/JETn/yRE
+        5/8kROf/JETn/yRE5/8kROb+mq3w+9bj9fze6fb8h5zu+yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/I0Pn1SFC6BcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhQugXI0Pn1SRE
+        5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/9viO374u32/dzo9f1ie+v8JETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/JETn/yND59UhQugXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAI0LlUCND5r0jQ+XWI0Pn1iND
+        59YjQ+fkJETn/yRE5/8kROf/JETn/yRE5/8kROf/Ynrs+73M8/yTpvD7n7Lx+cnX9PxOa+r8JETn/yRE
+        5/8kROf/JETn/yRE5/8kROf/I0Pn5CND59YjQ+fWI0Pl1iND5r0jQuVQAAAAACRC5lwjQ+b+JETn/yRE
+        5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/9pguz8ssLy/Iyg7/yZq+/6w9Hz/FZw
+        6vwkROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yND5v4kQuZcJEPn2yRE
+        5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/KUjn/VVv6/vU4PX85O/2/uXw
+        9v7J1/T7Tmrq/CdG5/0kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yND
+        5twjQ+b+JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/K0rm/pWo7/zd6Pb8usry/ISa
+        7vylt/H8rb3x+4uf7vzAz/P82ub1/Iuf7/smRub+JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/I0Pm/iND5v4kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/9Ycur85fD2/pSo
+        7/pmgOz7Xnfr+4ec7v2Qpe/6YXrs+2iB7Puhs/D65O/2/kRh6fwkROf/JETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/JETn/yRE5/8jQ+b+JEPn2yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE
+        5/9Oaur8eZDu+4Sa7vx+le77jKHu/Jqu8PmGm+/7hJnu/HeN7fxHZOn8JETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/JETn/yRE5/8kROf/JETn/yND5twkQuZcI0Pm/iRE5/8kROf/JETn/yRE5/8kROf/JETn/z9c
+        6P2Knu/7v87z/MfW8/zd6fb71eL1/N7p9f3m8ff/5vH3/97p9f3V4vX83en2+8fV8/zAz/T7ip7v+z9c
+        6P0kROf/JETn/yRE5/8kROf/JETn/yRE5/8jQ+b+JELmXAAAAAAjQ+hPI0PmvSNE59UjQ+XWI0Pl1iND
+        5uQkROf/TGjq/HqQ7fzF1PT85vH3/+bx9//m8ff/5vH3/+bx9//m8ff/5vH3/+bx9//m8ff/5vH3/8XU
+        9Px6kO38TGnq/CRE5/8jQ+bkI0Pl1iND5dYjROfVI0PmvSND6E8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAhQugXI0Pn1SRE5/8kROf/JETn/yZG5v6Cl+775O/2/ubx9//X4/X91OH1/Nfk9fzX4/X95vH3/+Tv
+        9v6Cl+77Jkbm/iRE5/8kROf/JETn/yNE59UhQugXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAIULoFyND59UkROf/JETn/yRE5/8kROf/JETn/yRE5/9lfuz73Oj1/V956/rk7/b+5fD2/miA
+        7Prc6PX9Zn7s+yRE5/8kROf/JETn/yRE5/8kROf/JETn/yNE59UhQugXAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAACQ22g4kQ+bUJETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8mRuf9J0fm/rHC
+        8vu2x/P7Kkrn/SZG5/0kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRD5tQkNuwOAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAI0LoeiRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yNC
+        6HoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAjQ+erJETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/I0PnqwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACJD5YskROf/JETn/yRE5/8kROf/JETn/yRE
+        5/8kROf/I0Pn1SND5uQkROf/JETn/yRE5/8kROf/JETn/yRE5/8jQ+fkI0Pn1SRE5/8kROf/JETn/yRE
+        5/8kROf/JETn/yRE5/8iQ+eLAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIkTlHiNE5+wkROf/JETn/yRE
+        5/8kROf/JETn/yND59UhQugXI0Pl1iRE5/8kROf/JETn/yRE5/8kROf/JETn/yND59YhQugXI0Pn1SRE
+        5/8kROf/JETn/yRE5/8kROf/I0Tn7CJE5R4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJEPqMSNE
+        5+wkROf/JETn/yRE5/8kQ+bUIULoFwAAAAAjQ+XWJETn/yRE5/8kROf/JETn/yRE5/8kROf/I0Pn1gAA
+        AAAhQugXJEPm1CRE5/8kROf/JETn/yNE5+wjQuUyAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAIkTlHiJD5YsjQ+erI0LoehI22g4AAAAAAAAAACNE59UkROf/JETn/yRE5/8kROf/JETn/yRE
+        5/8jQ+XWAAAAAAAAAAAkNtoOI0LoeiND56siQ+eLIkTlHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAI0PmvSRE5/8kROf/JETn/yRE
+        5/8kROf/JETn/yND5r0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAjQ+hPI0Pm/iRE
+        5/8kROf/JETn/yRE5/8jQ+b+I0LlUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAkQuZcJEPn2yND5v4jQ+b+JEPn2yRC5lwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA//gf///wD///8A//+DAMH/AQCA/gAAAH4AAAB+AAAAfgAAAH4AAAB/AA
+        AA/4AAAfgAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAH4AAAf8AAAD+AAAAfgAAAH4AAAB+AA
+        AAfgAAAH8BAID/gwDB//8A////AP///4H/8=
+</value>
+  </data>
 </root>
